feat(experimental MotionD), chore(remove usless field in Check, updated command)

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -73,6 +73,11 @@ detections:
       punishment_type: none
       max_vl: 10
       setback: true
+    D:
+      enabled: true
+      punishment_type: none
+      max_vl: 5
+      setback: true
   # Ground spoof detection(s)
   GroundSpoof:
     A:
