--- a/resources/config.yml
+++ b/resources/config.yml
@@ -101,3 +101,87 @@ detections:
       punishment_type: kick
       max_vl: 20
       code: Descartes
+  # Fly detections
+  Fly:
+    A:
+      enabled: true
+      punishment_type: kick
+      max_vl: 20
+      code: Albatross
+      diff_max: 0.015
+      setback: true
+    B:
+      enabled: true
+      punishment_type: kick
+      max_vl: 20
+      code: Hummingbird
+      diff_max: 0.01
+      setback: true
+    C:
+      enabled: true
+      punishment_type: kick
+      max_vl: 2
+      code: Blackhawk
+      setback: true
+  # Motion detections
+  Motion:
+    A:
+      enabled: true
+      punishment_type: kick
+      max_vl: 10
+      code: Mach1
+      setback: true
+    B:
+      enabled: true
+      punishment_type: kick
+      max_vl: 10
+      code: Mach2
+      setback: true
+    C:
+      enabled: true
+      punishment_type: kick
+      max_vl: 10
+      code: Mach3
+      setback: true
+    D:
+      enabled: true
+      punishment_type: kick
+      max_vl: 5
+      code: Mach4
+      setback: true
+  # Velocity detections
+  Velocity:
+    A:
+      enabled: true
+      punishment_type: kick
+      max_vl: 20
+      code: Hypersonic
+    B:
+      enabled: false
+      punishment_type: kick
+      max_vl: 20
+      code: Lightspeed
+  # EditionFaker detections
+  EditionFaker:
+    A:
+      enabled: true
+      punishment_type: kick
+      max_vl: 1
+      code: Janus
+  # Packet detections
+  Packets:
+    A:
+      enabled: true
+      punishment_type: kick
+      max_vl: 1
+      code: BP1
+    B:
+      enabled: true
+      punishment_type: kick
+      max_vl: 10
+      code: MPP
+    C:
+      enabled: true
+      punishment_type: kick
+      max_vl: 2
+      code: JPPM
