--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,9 @@
 ---
-name: Esoteric
+name: Esoteric-Loader
 author: ethaniccc
-description: A private anti-cheat made for PocketMine-MP
-version: 1.2.0
-main: ethaniccc\Esoteric\Loader
+description: A loader for the Esoteric anti-cheat
+version: 1.0.0
+main: ethaniccc\Loader\Loader
 api: 3.19.0
 mcpe-protocol: [431]
 permissions:
