add timer check

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -196,3 +196,10 @@ detections:
       punishment_type: kick
       max_vl: 2
       code: JPPM
+  # Timer detections
+  Timer:
+    A:
+      enabled: true
+      punishment_type: kick
+      max_vl: 5
+      code: Paradox
