account for elytra

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -159,6 +159,12 @@ detections:
       max_vl: 10
       code: Mach3
       setback: true
+    D:
+      enabled: true
+      punishment_type: none
+      max_vl: 10
+      code: Mach4
+      setback: false
   # Velocity detections
   Velocity:
     A:
