--- a/resources/config.yml
+++ b/resources/config.yml
@@ -41,10 +41,10 @@ setback_type: "none"
 timeout:
   # If this is disabled, hackers may be able to disable Esoteric by cancelling the sending of a certain packet
   enabled: true
-  # Amount of un-received packets to flag suspicion of a player timing out
-  total_packets: 20
-  # Amount of client ticks to pass by before kicking the player for timing out
-  ticks: 20
+  # Amount of un-received packets to flag suspicion of a player timing out (10 seconds / 200 ticks by default - like in MC Java and RakNet)
+  total_packets: 200
+  # Amount of client ticks to pass by before kicking the player for timing out (10 seconds / 200 ticks by default - like in MC Java and RakNet)
+  ticks: 200
 
 banwaves:
   # Choose if banwaves should be enabled on your server
