--- a/plugin.yml
+++ b/plugin.yml
@@ -23,3 +23,24 @@ permissions:
   ac.timings:
     description: Execute Timings for Esoteric
     default: op
+  ac.command.help:
+    description: Access to the anticheat's help command
+    default: op
+  ac.command.logs:
+    description: Access to get the anticheat logs of a player
+    default: op
+  ac.command.delay:
+    description: Access to change the alert delay
+    default: op
+  ac.command.banwave:
+    description: Handle Esoteric ban waves
+    default: op
+  ac.command.timings:
+    description: Enable timings for a certain period of time to see server performance with Esoteric
+    default: op
+  ac.command.exempt:
+    description: Get access to exempt sub commands in Esoteric
+    default: op
+  ac.command.debug:
+    description: Get access to debugging commands in Esoteric
+    default: op
