--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "prepare": "tsc"
   },
   "devDependencies": {
-    "bdsx": "file:../bdsx",
     "@types/node": "^12.20.5",
-    "typescript": "^4.2.3"
+    "bdsx": "file:../bdsx",
+    "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "zlibt2": "^0.5.1"
   }
 }
