--- a/resources/config.yml
+++ b/resources/config.yml
@@ -126,7 +126,7 @@ detections:
       code: Hypersonic
       pct: 99.99
     B:
-      enabled: false
+      enabled: true
       punishment_type: none
       max_vl: 20
       code: Lightspeed
