Support protocol 440 and 448

--- a/plugin.yml
+++ b/plugin.yml
@@ -5,7 +5,7 @@ description: A loader for the Esoteric anti-cheat
 version: 1.0.0
 main: ethaniccc\Loader\Loader
 api: 3.19.0
-mcpe-protocol: [431, 440]
+mcpe-protocol: [431, 440, 448]
 permissions:
   ac:
     description: Gives all anticheat permissions
