--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,9 +1,13 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/ethaniccc/Esoteric
 build-by-default: true
 branches:
-- master
-- API4
+  - master
+  - API4
+  - commando
 projects:
   Esoteric:
     path: ""
+    libs:
+      - src: Paroxity/Commando/Commando
+        version: ^2.1.2
 ...
